Added style.css and started style config

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <main>
         <h1>¡Bienvenido a mi web!</h1>  
     </main>
+    <p>Mi nombre es Carlos Martínez, y esta es mi página web 
+            de presentación donde podrás encontrar material de interés
+            sobre mí como mi Curriculum Vitae, enlaces a mis redes e 
+            información de contacto.<p>
     <script src="index.js"></script>
+
+    <h6>Work in progress<h6>
   </body>
 </html>
