add: bachelors thesis link

--- a/index.html
+++ b/index.html
@@ -259,6 +259,9 @@
                         <li>Análisis de señales biomédicas y optimización de modelos predictivos en Python.</li>
                     </ul>
                     
+                    <a href="media/Memoria_PFG_Carlos_Martinez-14-1.pdf" target="_blank" class="btn-link">
+                        <i class="fas fa-file-pdf"></i> Ver Memoria Técnica
+                    </a>
                 </div>
 
                 <div class="experience-item">
