fix: correctly adressed department

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             <li><strong>IAthon I ed.:</strong> Uso de API de ChatGPT para generación de informes automatizados.</li>
                             <li><strong>Curso BioDesign V ed.:</strong> Diseño y prototipado de simulador de venopunción.</li>
                             <li><strong>Alumno interno - Dpto. de biocomputación:</strong> Simulación de evolución de tumores utilizando PhysiBoSS en entorno Linux.</li>
-                            <li><strong>Alumno interno - Dpto. de ingeniería de materiales:</strong> 
+                            <li><strong>Alumno interno - Dpto. de ingeniería de tejidos:</strong> 
                                 <ul class="details">
                                 <li>Caracterización de hidrogeles mediante ensayos de indentación y desarrollo de fibras.</li>
                             </ul>
