add: master experiencies

--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
                 <div class="details-content">
                     <ul class="details">
                         <li>Mención en <strong>Análisis de datos</strong>.</li>
+                        <li><strong>Módulo en IESE Business School:</strong> Formación intensiva en gestión estratégica y visión de negocio.</li>
+                        <li><strong>Proyecto en Feria MEDICA (Düsseldorf):</strong> Trabajo de campo en consultoría de internacionalización; prospección de mercado y captación de partners estratégicos globales.</li>
                     </ul>
                 </div>
 
