refactor: sandwich layout on mobile

--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@
 </head>
 <body>
     <div class="container">
-        <!-- BARRA LATERAL (SIDEBAR) -->
-        <aside>
+        <aside class="sidebar-top">
             <div class="profile-photo-container">
-                <!-- Foto de perfil: Asegúrate de tener la imagen en la carpeta media/ -->
                 <img src="media/E44A6166.JPG" alt="Carlos Martínez" class="profile-photo" onerror="this.style.display='none'"> 
             </div>
 
@@ -42,60 +40,15 @@
                     <span class="skill-tag">Git</span>
                     <span class="skill-tag">Linux</span>
                     <span class="skill-tag">LaTeX</span>
-                    <span class="skill-tag">R</span>
-                    <span class="skill-tag">Machine Learning</span>
-                    <span class="skill-tag">Data Analysis</span>
                 </div>
                 <p style="margin-top:10px; font-weight:600; font-size:14px;">Herramientas</p>
                 <div class="skills-grid">
                     <span class="skill-tag">PowerBI</span>
                     <span class="skill-tag">GitHub/GitLab</span>
-                    <span class="skill-tag">RStudio</span>
-                    <span class="skill-tag">Anaconda</span>
-                </div>
-            </div>
-
-            <div style="margin-top: 35px;">
-                <h2>Idiomas</h2>
-                <p><strong>Castellano:</strong> Nativo</p>
-                <p style="margin-top:5px;"><strong>Inglés:</strong> Advanced (C1)</p>
-                <p style="margin-top:5px;"><strong>Euskera:</strong> Básico (A1)</p>
-                <p style="margin-top:5px;"><strong>Francés:</strong> Elementary (A2)</p>
-            </div>
-
-            <div class="contact-info" style="margin-top: 30px;">
-                <h2>Contacto</h2>
-                <div class="contact-item">
-                    <i class="fas fa-map-marker-alt"></i> <span>Donostia / San Sebastián</span>
-                </div>
-                <div class="contact-item">
-                    <i class="fas fa-phone"></i> <a href="tel:+34608968901">+34 608 96 89 01</a>
-                </div>
-                <div class="contact-item">
-                    <i class="fas fa-envelope"></i> <a href="mailto:carmarfu03@gmail.com">carmarfu03@gmail.com</a>
-                </div>
-                <div class="contact-item">
-                    <i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/cmdlf" target="_blank">LinkedIn</a>
-                </div>
-                <div class="contact-item">
-                    <i class="fas fa-car"></i> <span>Carnet B (Coche propio)</span>
-                </div>
-            </div>
-
-            <div style="margin-top: 35px;">
-                <h2>Aficiones</h2>
-                <div class="hobby-item">
-                    <strong><i class="fas fa-mountain"></i> Montaña y Escalada</strong>
-                    <span>Estilo de vida saludable, activo y contacto con la naturaleza.</span>
-                </div>
-                <div class="hobby-item">
-                    <strong><i class="fas fa-chess-knight"></i> Modelismo</strong>
-                    <span>Habilidad manual, paciencia y atención al detalle.</span>
                 </div>
             </div>
         </aside>
 
-        <!-- CONTENIDO PRINCIPAL -->
         <main>
 
             <section>
@@ -258,6 +211,47 @@
                 </details>
             </section>
         </main>
+
+        <aside class="sidebar-bottom">
+            <div class="languages-section"> <h2>Idiomas</h2>
+                <p><strong>Castellano:</strong> Nativo</p>
+                <p style="margin-top:5px;"><strong>Inglés:</strong> Advanced (C1)</p>
+                <p style="margin-top:5px;"><strong>Euskera:</strong> Básico (A1)</p>
+                <p style="margin-top:5px;"><strong>Francés:</strong> Elementary (A2)</p>
+            </div>
+
+            <div class="contact-info" style="margin-top: 35px;">
+                <h2>Contacto</h2>
+                <div class="contact-item">
+                    <i class="fas fa-map-marker-alt"></i> <span>Donostia / San Sebastián</span>
+                </div>
+                <div class="contact-item">
+                    <i class="fas fa-phone"></i> <a href="tel:+34608968901">+34 608 96 89 01</a>
+                </div>
+                <div class="contact-item">
+                    <i class="fas fa-envelope"></i> <a href="mailto:carmarfu03@gmail.com">carmarfu03@gmail.com</a>
+                </div>
+                <div class="contact-item">
+                    <i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/cmdlf" target="_blank">LinkedIn</a>
+                </div>
+                <div class="contact-item">
+                    <i class="fas fa-car"></i> <span>Carnet B (Coche propio)</span>
+                </div>
+            </div>
+
+            <div style="margin-top: 35px;">
+                <h2>Aficiones</h2>
+                <div class="hobby-item">
+                    <strong><i class="fas fa-mountain"></i> Montaña y Escalada</strong>
+                    <span>Estilo de vida saludable, activo y contacto con la naturaleza.</span>
+                </div>
+                <div class="hobby-item">
+                    <strong><i class="fas fa-chess-knight"></i> Modelismo</strong>
+                    <span>Habilidad manual, paciencia y atención al detalle.</span>
+                </div>
+            </div>
+        </aside>
+
     </div>
 </body>
 </html>
